--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ hr {
   font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
   font-weight: bold;
   font-size: 28px;
+  line-height: 1.2;
 }
 .elements ul p {
   margin: 0 0 5px;
@@ -316,7 +317,7 @@ hr {
 .elements ul li:before {
   content: '';
   position: absolute;
-  top: 1em;
+  top: 0.8em;
   left: -1.5em;
   display: block;
   width: 1em;
