--- a/style.css
+++ b/style.css
@@ -624,7 +624,7 @@ body .slick-slide.slick-active {
 }
 
 .slick-slide img {
-  width: auto;
+  width: 100%;
   max-height: 460px;
   margin: 0 auto;
 }
