--- a/style.css
+++ b/style.css
@@ -618,13 +618,15 @@ body .slick-slide.slick-active {
   font-size: 17px;
 }
 
-.slide-left,
-.slide-right {
+.slide-left .tbl,
+.slide-right .tbl {
   display: table;
+  table-layout: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 .slick-slide img {
-  width: 100%;
   max-height: 460px;
   margin: 0 auto;
 }
@@ -962,10 +964,13 @@ body .slick-slide.slick-active {
     padding-top: 110px;
   }
 
-  .slick-slide.slick-active .slide-left {
-    opacity: .9;
+  .slick-slide .slide-left {
     text-align: center;
     padding-top: 30px;
+    padding-bottom: 5px;
+  }
+  .slick-slide.slick-active .slide-left {
+    opacity: .9;
   }
   .slick-slide img {
     max-height: 320px;
